Correct code as per PR comments